tests/snapshots/dbc-cantools/issue_163_newline.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - dummy_node
messages:
  - id:
      Standard: 0
    name: dummy_msg
    size: 8
    transmitter: dummy_node
attribute_definitions:
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgSendType
      - Enum:
          - Cyclic
          - not_used
          - not_used
          - not_used
          - not_used
          - Cyclic
          - not_used
          - IfActive
          - NoMsgSendType
  - Node:
      - NmStationAddress
      - Hex:
          - Uint: 0
          - Uint: 0
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
attribute_defaults:
  - name: GenSigSendType
    value:
      String: Cyclic
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: GenMsgSendType
    value:
      String: NoMsgSendType
  - name: NmStationAddress
    value:
      Uint: 0
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: CAN
attribute_values_database:
  - name: DBName
    value:
      String: issue_165_newline
